Fix 'Copy and paste of interface in component diagram does not update the displayed name'

We need to override WidgetBase::setUMLObject() to propagate the new object
name to the floating text widget holding the interface name.

BUG:403853
FIXED-IN:2.27.2 (KDE Applications 18.12.2)