umbrello/umlwidgets/classifierwidget.cpp
@@ -1507,3 +1507,15 @@ bool ClassifierWidget::showPropertiesDialog()
     }
     return false;
 }
+
+/**
+ * Overriding the method from WidgetBase because we need to do
+ * something extra in case this ClassifierWidget represents
+ * an interface widget used in component diagrams.
+ */
+void ClassifierWidget::setUMLObject(UMLObject *obj)
+{
+    WidgetBase::setUMLObject(obj);
+    if (isInterfaceWidget() && visualProperty(DrawAsCircle))
+        m_pInterfaceName->setText(obj->name());
+}
