umbrello/umlwidgets/classifierwidget.h
@@ -107,6 +107,7 @@ public:
     virtual bool loadFromXMI1(QDomElement & qElement);
 
     virtual bool showPropertiesDialog();
+    void setUMLObject(UMLObject *obj);
 
 public Q_SLOTS:
     virtual void slotMenuSelection(QAction* action);
